Lots of cleaning up done, persistence complete

--- a/ReapeatProject/res/values/strings.xml
+++ b/ReapeatProject/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">ReapeatProject</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="saved_high_score">0</string><string name="action_settings">Settings</string>
+    
 
 </resources>
